--- a/movies.css
+++ b/movies.css
@@ -10,9 +10,18 @@ body {
 
 .form-box {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
   width: 400px;
+}
+
+div {
+   margin: 30px;
+}
+
+button {
+  margin: 15px;
 }
